# pm

./: .gitignore  .tool-versions  README.md  mypy.ini  pyproject.toml  task
src/: import_map.json  lock.json  main.ts
src/pm/: __main__.py  paths.py
src/pm/core/: models.py  paths.py
src/pm/services/: user_deps.py  version_parser.py  version_parser__test.py  version_range_parser.py  version_range_parser__test.py
src/systems/core/: models.ts  paths.ts
src/systems/database/: mod.ts
src/systems/discovery/: mod.test.ts  mod.ts  models.ts  nameParsing.test.ts  nameParsing.ts  versionParsing.test.ts  versionParsing.ts
testing/: .gitignore
testing-folder/: .gitignore
testing-folder/project/: pm.json
testing-folder/project/subfolder/: pm.json
testing/pm-root/store/fake-runtime/2.1.13.1/: pm.json
testing/pm-root/store/fake-script/0.0.1/: pm.json
testing/pm-root/user-deps/: mydeps.json
