[tool.poetry]
name = "pm"
version = "0.1.0"
description = ""
authors = ["Carlos Fdez. Llamas <hello@sirikon.me>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.11"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.7"
mypy = "^0.910"
autopep8 = "^1.6.0"
types-pkg-resources = "^0.1.3"
